[tool.poetry]
name = "jql"
version = "0.1.0"
description = "Hy[Python] JQL query builder"
authors = ["Ilkhomidin Bakhoraliev <bakhoraliev.ilkhomidin@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "=3.10.6"


[tool.poetry.group.dev.dependencies]
ward = "^0.66.1b0"
hy = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
